# llaml

./: .gitignore  CHANGELOG.md  README.md  dune-project  llaml-eio.opam  llaml.opam
lib/: anthropic_codec.ml  auth.ml  auth.mli  bedrock_codec.ml  client.ml  client.mli  dune  gemini_codec.ml  json_merge.ml  openai_codec.ml  provider.ml  provider.mli  providers.ml  providers.mli  router.ml  router.mli  sigv4.ml  sse.ml  types.ml  types.mli
lib_eio/: dune  http_eio.ml  http_eio.mli  llaml_eio.ml  llaml_eio.mli
test/: dune  test_llaml.ml
